package com.example.lbycpeifinalproject;

import com.example.lbycpeifinalproject.buyer.Login;

public class MainHandler {
    public static void main(String[] args) throws Exception {
        Login.main(null);
    }
}
